# apalache-chai

./: .envrc  .gitignore  .gitmodules  Makefile  README.md  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: docs.yml  main.yml
chai/: __init__.py  chai.py  client.py  cmdExecutor_pb2.py  cmdExecutor_pb2.pyi  cmdExecutor_pb2_grpc.py  cmdExecutor_pb2_grpc.pyi  cmd_executor.py  source.py  transExplorer_pb2.py  transExplorer_pb2.pyi  transExplorer_pb2_grpc.py  transExplorer_pb2_grpc.pyi  trans_explorer.py
chai/blocking/: __init__.py  cmd_executor.py  utils.py
example/: FileSystem.tla  README.md  app.py
integration-tests/: CustomDep.tla  M.tla  TransitiveDep.tla  conftest.py  test_apalache_integration.py  test_cmd_executor_blocking_integration.py  test_cmd_executor_integration.py  test_trans_explorer_integration.py
tests/: test_apalache_integration.py  test_chai.py  test_source.py
