[tool.poetry]
name = "chai"
version = "0.1.0"
description = "Client for Human-Apalache Interaction"
authors = ["Your Name <you@example.com>"]
license = "Apache2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.1.2"
pyright = "^1.1.260"

# These are dependencies used by some developers,
# not actually required for testing etc.
python-lsp-server = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
