[tool.poetry]
name = "chai"
version = "0.1.0"
description = "Client for Human-Apalache Interaction"
authors = ["Shon Feder <shon@informal.systems>"]
license = "Apache2.0"

[tool.poetry.dependencies]
python = "^3.8"
grpcio-tools = "^1.47.0"
poetry = {version = "^1.2.0b3", allow-prereleases = true}
grpcio = "^1.53.0"
grpc-stubs = "^1.24.11"
types-protobuf = "^3.19.22"
typing-extensions = "^4.3.0"
cryptography = "41.0.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
pyright = "^1.1.260"
mypy-protobuf = "^3.2.0"

# Documentation generation and viewing
pdoc = "^12.2.0"

# Used for graph generation in ./example/app.py
networkx = {extras = ["all"], version = "^2.8.7"}
matplotlib = "^3.6.1"

# These are dependencies used by some developers,
# not actually required for testing etc.
python-lsp-server = "^1.5.0"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Exclusions for static analysis tools

[tool.pyright]
exclude = ["apalache", "**/*_pb2*"]

[tool.isort]
profile = "black" # Prevent conflicts with black formatting
skip_glob = ["apalache", "**/*_pb2*"]

[tool.black]
# blakc requires regexs instead of globs
exclude = "(apalache|.*_pb2.*)"

# See setup.cfg for flake8 exclusions
